<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/login_logo_image"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/login_app_logo_description"
        android:src="@drawable/elogo"
        app:srcCompat="@drawable/elogo"
        android:layout_above="@+id/username_input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_input"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/username_field_hint"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_field_hint"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/password_input"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_in_btn_text" />

        <Button
            android:id="@+id/signup_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up_btn_text" />
    </LinearLayout>

</RelativeLayout>